# adventofcode

./: .stylish-haskell.yaml  README.md
2017/: adventofcode2017.cabal  default.nix  package.yaml  stack.yaml
2017/Day01/: Main.hs
2017/Day02/: Main.hs
2017/Day03/: Main.hs
2017/Day04/: Main.hs
2017/Day05/: Main.hs
2017/Day06/: Main.hs
2017/Day07/: Main.hs
2017/Day08/: Main.hs
2017/Day09/: Main.hs
2017/Day10/: Main.hs
2017/Day11/: Main.hs
2017/Day12/: Main.hs
2017/Day13/: Main.hs
2017/Day14/: Main.hs
2017/Day15/: Main.hs
2017/Day16/: Main.hs
2017/Day17/: Main.hs
2017/Day18/: Main.hs
2017/Day19/: Main.hs
2017/Day20/: Main.hs
2017/shared/Crypto/Hash/: Knot.hs
2017/shared/Data/List/: Zipper.hs
2018/: .ghc.environment.x86_64-linux-8.4.3  README.md  adventofcode2018.cabal  default.nix  package.nix  shell.nix
2018/src/: Main.hs
2018/src/Day01/: Solution.hs
2018/src/Day02/: Solution.hs
2018/src/Day03/: Solution.hs
2018/src/Day04/: Solution.hs
2018/src/Day05/: Solution.hs  input.txt
2018/src/Day06/: Solution.hs
2018/src/Day07/: Solution.hs
2020/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Parser.hs  SubsetSum.hs  shell.nix
