cabal-version: 2.4
name: adventofcode2017
version: 1.0.0
build-type: Simple

library
  hs-source-dirs:
      shared
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , split
  exposed-modules:
      Crypto.Hash.Knot
      Data.List.Zipper
  default-language: Haskell2010

executable day-01
  main-is: Day01/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      array
    , base
  default-language: Haskell2010

executable day-02
  main-is: Day02/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , recursion-schemes
  default-language: Haskell2010

executable day-03
  main-is: Day03/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , containers
    , lens
  default-language: Haskell2010

executable day-04
  main-is: Day04/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , recursion-schemes
  default-language: Haskell2010

executable day-05
  main-is: Day05/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      adventofcode2017
    , base
  default-language: Haskell2010

executable day-06
  main-is: Day06/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , containers
  default-language: Haskell2010

executable day-07
  main-is: Day07/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , containers
    , lens
  default-language: Haskell2010

executable day-08
  main-is: Day08/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , containers
    , lens
  default-language: Haskell2010

executable day-09
  main-is: Day09/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , parsec
  default-language: Haskell2010

executable day-10
  main-is: Day10/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      adventofcode2017
    , base
    , split
  default-language: Haskell2010

executable day-11
  main-is: Day11/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , split
  default-language: Haskell2010

executable day-12
  main-is: Day12/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , containers
    , lens
  default-language: Haskell2010

executable day-13
  main-is: Day13/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
  default-language: Haskell2010

executable day-14
  main-is: Day14/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      adventofcode2017
    , base
    , containers
    , lens
  default-language: Haskell2010

executable day-15
  main-is: Day15/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
  default-language: Haskell2010

executable day-16
  main-is: Day16/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , containers
    , split
  default-language: Haskell2010

executable day-17
  main-is: Day17/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , containers
  default-language: Haskell2010

executable day-18
  main-is: Day18/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , containers
    , vector
  default-language: Haskell2010

executable day-19
  main-is: Day19/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      array
    , base
    , split
  default-language: Haskell2010

executable day-20
  main-is: Day20/Main.hs
  ghc-options: -Wall -Wwarn
  build-depends:
      base
    , lens
    , megaparsec
  default-language: Haskell2010
