name:                adventofcode2018
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple
cabal-version:       >=1.10

executable adventofcode2018
  main-is:
    Main.hs
  other-modules:
    Day01.Solution
    Day02.Solution
    Day03.Solution
    Day04.Solution
  build-depends:
    base >=4.11 && <4.12,
    containers,
    megaparsec,
    mtl
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
